# GreenMp3Encoder

./: .gitignore  CMakeLists.txt  README.md
src/: encoder_app.cpp  encoder_app.h  encoding_task.cpp  encoding_task.h  logging_utils.h  main.cpp  message_queue.h  riff_wave.cpp  riff_wave.h  thread_pool.cpp  thread_pool.h  worker_thread.cpp  worker_thread.h
substitutes/: version_no.h.in
